tests/build/cases/widget_new/unknown_member_in_when_expr2.stderr
error[E0599]: no method named `__w_unknown__` found for struct `is_pressed_inputs__` in the current scope
 --> cases/widget_new/unknown_member_in_when_expr2.rs:7:16
  |
7 |         when *#is_pressed.unknown { // only .0 or .state allowed.
  |                ^^^^^^^^^^ help: there is a method with a similar name: `__w_0__`
