tests/build/cases/widget_new/unknown_member_in_when_expr2.rs
use zero_ui::prelude::*;

fn main() {
    let _scope = App::minimal();
    let _ = Wgt! {
        margin = 0;
        when *#is_pressed.unknown { // only .0 or .state allowed.
            margin = 1;
        }
    };
}
